--- a/HTML/project/index.html
+++ b/HTML/project/index.html
@@ -8,9 +8,9 @@
 
 </head>
 <body align="center">
-    <img src="C:\Users\student\Desktop\projekatRadeMarkoIStefan\images\fbi.png" > <br>
+    <img src="images\fbi.png" > <br>
     <h1><b>FBI MOST WANTED CRIMINALS</b></h1> <br><br>
-    <a href="">Create New Wanted Postr</a> <br> <br>
+    <a href="admin\create_new.html">Create New Wanted Post</a> <br> <br>
     <a href="">Most Wanted Criminal</a>
 
 </body>
