--- a/HTML/weeklyProject/index.html
+++ b/HTML/weeklyProject/index.html
@@ -11,7 +11,7 @@
     <img src="images\fbi.png" > <br>
     <h1><b>FBI MOST WANTED CRIMINALS</b></h1> <br><br>
     <a href="admin\create_new.html">Create New Wanted Post</a> <br> <br>
-    <a href="">Most Wanted Criminal</a>
+    <a href="posters\bart.html">Most Wanted Criminal</a>
 
 </body>
 </html>
