--- a/HTML/weeklyProject/posters/bart.html
+++ b/HTML/weeklyProject/posters/bart.html
@@ -112,7 +112,7 @@
                                 ut laoreet dolore magna aliquam erat volutpat.</p>
                             <br>
                             <h3>Last seen at</h3>
-                            <iframe src="htpps:hwww.google.rs/maps" seamless frameborder="0" width="960px" height="500px">
+                            <iframe src="https://www.google.rs/maps?source=tldsi&hl=en" name="google" frameborder="1" width="960px" height="500px">
                                 <p>
                                     iframe are not supported by your browser</p>
                             </iframe>
@@ -121,7 +121,7 @@
                     </tr>
                 </table>
             </td>
-            <td width="100px"></td>
+            <td></td>
         </tr>
     </table>
 </body>
