--- a/app/mario/index.html
+++ b/app/mario/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="index.css">
+   
     <title>Document</title>
 </head>
 <body>
-    <div><img src="" alt=""></div>
-    <div><img src="" alt=""></div>
+
+    <div id="ludak">
+        <img src="img/mario_running.gif" alt=""  class="blind" id="run">
+        <img src="img/mario.png" alt="" id="stand">
+    </div>
+    <script src="app.js" ></script>
 </body>
 </html>
