--- a/Project-Jquary-Ajax-Bootstrap/nextPage.html
+++ b/Project-Jquary-Ajax-Bootstrap/nextPage.html
@@ -15,34 +15,30 @@
     <nav class="navbar navbar-light justify-content-between">
         <a href="http://www.bgit.rs/en/">BitShow</a>
         <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2 " type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
 
-    <header>
-        <h1>Popular Shows</h1>
-    </header>
-
     <section>
-
         <div class="container">
             <div class="row">
-
-            </div>
-            <!-- <div class="col-md-3"><img src=""><p><a href="#"></a></p></div> -->
-        </div>
-
+                <div>
+                    <!-- here gous the selected movie -->
+                </div>
     </section>
 
 
+
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
